# hermes

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: scaleway.yaml
alembic/: env.py
alembic/versions/: a9ddfa5b8207_initial_migration.py
app/: main.py
app/api/: emails.py  templates.py  webhooks.py
app/core/: config.py  security.py
app/models/: __init__.py  email.py
app/schemas/: __init__.py  email.py
app/services/: email_sender.py  template_engine.py  webhook.py
app/smtp/: server.py
